--- a/templates/editticket.gohtml
+++ b/templates/editticket.gohtml
@@ -48,10 +48,12 @@
                                 <option {{if (eq .Issue  1)}} selected="true" {{end}} value="1">Billing Terminated</option>
                                 <option {{if (eq .Issue  2)}} selected="true" {{end}} value="2">DNA FP Reactivation</option>
                                 <option {{if (eq .Issue  3)}} selected="true" {{end}} value="3">Extension</option>
-                                <option {{if (eq .Issue  4)}} selected="true" {{end}} value="4">MC Contacts</option>
+                                <option {{if (eq .Issue  4)}} selected="true" {{end}} value="4">MC Contacts (depreacated)</option>
                                 <option {{if (eq .Issue  5)}} selected="true" {{end}} value="5">Discount</option>
                                 <option {{if (eq .Issue  6)}} selected="true" {{end}} value="6">Force Downgrade/Cancellation</option>
                                 <option {{if (eq .Issue  7)}} selected="true" {{end}} value="7">Undo Downgrade/Cancellation</option>
+                                <option {{if (eq .Issue  8)}} selected="true" {{end}} value="8">Legacy Contacts</option>
+                                <option {{if (eq .Issue  9)}} selected="true" {{end}} value="9">TNE Contacts</option>
                             </select>
                         </div>
                     </td>
